fix shock to shocked

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         </div>
                         <div class="flex justify-center items-center rounded-full px-3 py-1.5 border-line border-2 gap-1.5">
                             <p>🤯</p>
-                            <p class="text-sm font-semibold">Shock</p>
+                            <p class="text-sm font-semibold">Shocked</p>
                         </div>
                     </div>
                     <a href="#">
@@ -173,7 +173,7 @@
                     </div>
                     <div class="flex justify-center items-center rounded-full px-3 py-1.5 border-line border-2 gap-1.5">
                         <p>🤯</p>
-                        <p class="text-sm font-semibold">Shock</p>
+                        <p class="text-sm font-semibold">Shocked</p>
                     </div>
                 </div>
 
