--- a/profile.html
+++ b/profile.html
@@ -208,7 +208,7 @@
                     </div>
                     <div class="flex justify-center items-center rounded-full px-3 py-1.5 border-line border-2 gap-1.5">
                         <p>🤯</p>
-                        <p class="text-sm font-semibold">Shock</p>
+                        <p class="text-sm font-semibold">Shocked</p>
                     </div>
                 </div>
 
